docs/0.17/_sources/api/gammapy.modeling.models.ConstantSpatialModel.rst.txt
ConstantSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpatialModel.covariance
      ~ConstantSpatialModel.default_parameters
      ~ConstantSpatialModel.evaluation_radius
      ~ConstantSpatialModel.frame
      ~ConstantSpatialModel.parameters
      ~ConstantSpatialModel.phi_0
      ~ConstantSpatialModel.position
      ~ConstantSpatialModel.position_error
      ~ConstantSpatialModel.tag
      ~ConstantSpatialModel.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpatialModel.__call__
      ~ConstantSpatialModel.copy
      ~ConstantSpatialModel.create
      ~ConstantSpatialModel.evaluate
      ~ConstantSpatialModel.evaluate_geom
      ~ConstantSpatialModel.from_dict
      ~ConstantSpatialModel.from_parameters
      ~ConstantSpatialModel.integrate
      ~ConstantSpatialModel.plot
      ~ConstantSpatialModel.plot_error
      ~ConstantSpatialModel.to_dict
      ~ConstantSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: tag
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: to_dict
   .. automethod:: to_region
