docs/0.18/_sources/api/gammapy.modeling.models.ConstantSpatialModel.rst.txt
ConstantSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpatialModel.covariance
      ~ConstantSpatialModel.default_parameters
      ~ConstantSpatialModel.evaluation_radius
      ~ConstantSpatialModel.frame
      ~ConstantSpatialModel.is_energy_dependent
      ~ConstantSpatialModel.parameters
      ~ConstantSpatialModel.phi_0
      ~ConstantSpatialModel.position
      ~ConstantSpatialModel.position_error
      ~ConstantSpatialModel.tag
      ~ConstantSpatialModel.type
      ~ConstantSpatialModel.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpatialModel.__call__
      ~ConstantSpatialModel.copy
      ~ConstantSpatialModel.create
      ~ConstantSpatialModel.evaluate
      ~ConstantSpatialModel.evaluate_geom
      ~ConstantSpatialModel.from_dict
      ~ConstantSpatialModel.from_parameters
      ~ConstantSpatialModel.integrate_geom
      ~ConstantSpatialModel.plot
      ~ConstantSpatialModel.plot_error
      ~ConstantSpatialModel.plot_grid
      ~ConstantSpatialModel.plot_interative
      ~ConstantSpatialModel.to_dict
      ~ConstantSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: tag
   .. autoattribute:: type
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interative
   .. automethod:: to_dict
   .. automethod:: to_region
